# boilergram

./: .gitignore  LICENSE  README.md  pyproject.toml
src/boilergram/: __main__.py
src/boilergram/contrib/demo/: apps.py  routers.py
src/boilergram/core/management/: app.py  inits.py
src/boilergram/core/templates/bot/bot/: settings.py
